After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621646 - peas_engine_set_active_plugins a misnomer
peas_engine_set_active_plugins a misnomer
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2010-06-15 14:09 UTC by Bastien Nocera
Modified: 2010-06-16 18:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Rename 'activate_plugin'-type API to 'load_plugin'. (21.74 KB, patch)
2010-06-16 17:46 UTC, Steve Frécinaux
committed Details | Review

Description Bastien Nocera 2010-06-15 14:09:52 UTC
As it doesn't actually activate any plugins. I'm guessing this apply to all the PeasEngine methods, which just *load* the plugin, and not activate it.

The documentation needs to also be amended to mention PeasExtensionSet, and how to actually activate those plugins.
Comment 1 Steve Frécinaux 2010-06-16 14:13:59 UTC
I think we will need to change the name for this method and the related ones like (de)activate plugin.

Instead of the "(de)activate" verbs, which one would you think is better? "enable/disable" or "(un)load"?
Comment 2 Bastien Nocera 2010-06-16 14:24:28 UTC
load/unload seems better to me, as it's more closely related to what it's doing (loading the file into memory, loading the symbols).
Comment 3 Steve Frécinaux 2010-06-16 17:46:07 UTC
Created attachment 163858 [details] [review]
Rename 'activate_plugin'-type API to 'load_plugin'.

The reason is that the verb 'activate' let people think there will be
some kind of PeasActivatable-like activation, but the engine only
handles the actual loading. The application is responsible for the
handling of the extensions, eventually through PeasExtensionSet
instances.
Comment 4 Steve Frécinaux 2010-06-16 17:47:03 UTC
Looks a bit ugly in the API though.
Comment 5 Steve Frécinaux 2010-06-16 18:14:07 UTC
Attachment 163858 [details] pushed as 52f279c - Rename 'activate_plugin'-type API to 'load_plugin'.