Rename 'activate_plugin'-type API to 'load_plugin'.

The reason is that the verb 'activate' let people think there will be
some kind of PeasActivatable-like activation, but the engine only
handles the actual loading. The application is responsible for the
handling of the extensions, eventually through PeasExtensionSet
instances.

https://bugzilla.gnome.org/show_bug.cgi?id=621646